# signal-lab

./: .gitignore  README.md  pyproject.toml
scripts/: run_pipeline.py
src/signal_lab/analysis/: correlation.py  plots.py
src/signal_lab/data/sources/: markets.py  weather.py
src/signal_lab/domain/: signals.py
src/signal_lab/pipelines/: features.py  ingestion.py  processing.py
